syntax = "proto3";

option go_package = "../";

package main;

service MailAnalysis {
    rpc SimpleProcedure(SimpleRequest) returns (SimpleResponse) {}
    rpc HashProcedure(SimpleRequest) returns (SimpleResponse) {}
}

message SimpleRequest {
    string text = 1;
}

message SimpleResponse {
    string text = 1;
}

message HashRequest {
    string text = 1;
}

message HashResponse {
    string text = 1;
}